--- a/index.html
+++ b/index.html
@@ -24,36 +24,29 @@
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
-          <div class="col-md-3">
-            <div class="col-md-8"></div>
-            <div class="col-md-3">
-              <div class="navbar-header">
-                  <a class="navbar-brand" href="#">Instagram</a>
-              </div>
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Instagram</a>
             </div>
-          </div>
-          <div class="col-md-6">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-              <form style="margin-top: 3%" action="index.html" method="post">
-                <input class="form-control" type="text" name="" value="">
-              </form>
-            </div>
-
-          </div>
-          <div class="col-md-3">
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse right-nav" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#" class="glyphicon glyphicon-user"></a>
+                      <a href="" class="dropdown-toggle glyphicon glyphicon-user" data-toggle="dropdown"></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Profile</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">CSS</a></li>
+                        <li><a href="#">Log out</a></li>
+                      </ul>
                     </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-          </div>
         </div>
         <!-- /.container -->
     </nav>
+
 
     <!-- Page Content -->
     <div class="container">
